--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
-    "list.js": "^1.2.0",
-    "polyline": "^0.2.0"
+    "list.js": "^1.2.0"
   }
 }
