--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.0",
     "list.js": "^1.2.0"
   }
 }
