--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.0",
-    "list.js": "^1.2.0"
+    "list.js": "^1.2.0",
+    "timeago": "^1.5.3"
   }
 }
